# tdd-learning-python

./: .gitignore  README.md  agent-context.yaml  pyproject.toml
docs/: chapter-1-cli-e2e.md  chapter-1-example.md  chapter-2-cli-e2e.md  chapter-2-example.md  chapter-3-cli-e2e.md  chapter-3-example.md  chapter-4-cli-e2e.md  chapter-4-example.md  chapter-5-cli-e2e.md  chapter-5-example.md  chapter-6-cli-e2e.md  chapter-6-example.md  chapter-6-outline.md  learning-path.md
exercises/01-hello-tdd/: README.md
exercises/02-fizzbuzz/: README.md
exercises/03-password-validator/: README.md
exercises/04-bank-account/: README.md
exercises/05-shopping-cart/: README.md
exercises/06-test-architecture/: README.md
src/tdd_learning_python/: __init__.py  __main__.py  chapter1.py  chapter1_cli.py  chapter2.py  chapter2_cli.py  chapter3.py  chapter3_cli.py  chapter4.py  chapter4_cli.py  chapter5.py  chapter5_cart.py  chapter5_cli.py  chapter5_coupon.py  chapter5_renderer.py  chapter6.py  chapter6_cli.py  cli.py
tests/: test_chapter1.py  test_chapter2.py  test_chapter2_cli_e2e.py  test_chapter3.py  test_chapter3_cli_e2e.py  test_chapter4.py  test_chapter4_cli_e2e.py  test_chapter5.py  test_chapter5_cli_e2e.py  test_chapter5_renderer.py  test_chapter6.py  test_chapter6_cli_e2e.py  test_cli_e2e.py  test_import.py
